src/objects/Property_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>City_Address__c</fullName>
        <label>City Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Image__c</fullName>
        <label>Property Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Location__c</fullName>
        <label>Property Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>State_Address__c</fullName>
        <label>State Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Address__c</fullName>
        <label>Zip Address</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Property Inspection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Property Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>